bk_ida/gccida/c0/cselib_invalidate_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_invalidate_rtx/src/cselib.c:1643:49: error: use of undeclared identifier 'machine_mode'
cselib_invalidate_regno( dest->fld[0].rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_invalidate_rtx/src/cselib.c:1643:64: error: expected expression
cselib_invalidate_regno( dest->fld[0].rtuint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_invalidate_rtx/src/cselib.c:1649:28: error: use of undeclared identifier 'machine_mode'
if ( push_operand( dest, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_invalidate_rtx/src/cselib.c:1649:43: error: expected expression
if ( push_operand( dest, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)) ) 
                                          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cselib_invalidate_rtx/src/obj/cselib.o] Error 1
